Change logo on about.html
update logo on about

--- a/about.html
+++ b/about.html
@@ -6,14 +6,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="author" content="Danielle DuPuis">
     <meta name="description"
-        content="Danielle DuPuis is a UX Designer and Marketing Professional based in Denver, Colorado.">
+        content="Danielle DuPuis is  UX Designer and Marketing Professional based in Denver, Colorado.">
     <title>About Danielle DuPuis</title>
 </head>
 
 <body>
     <header>
         <div>
-            <img src="https://placehold.co/150x50" alt="150x50 placeholder image">
+            <img src="img/about/danielle-logo.svg" alt="Danielle logo">
             <nav>
                 <ul>
                     <li><a href="index.html">Work</a></li>
