change logo on about

--- a/about.html
+++ b/about.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="author" content="Danielle DuPuis">
     <meta name="description"
-        content="Danielle DuPuis is  UX Designer and Marketing Professional based in Denver, Colorado.">
+        content="Danielle DuPuis is a UX Designer and Marketing Professional based in Denver, Colorado.">
     <title>About Danielle DuPuis</title>
 </head>
 
