added link to georgie project page on index.html

--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
                         primarily
                         used
                         Figma and Adobe Illustrator to compete this project.</p>
-                    <a href="#">View Georgie</a>
+                    <a href="georgie.html">View Georgie</a>
                 </div>
                 <div>
                     <picture>
