updated div structure

--- a/georgie.html
+++ b/georgie.html
@@ -26,9 +26,7 @@
     <main>
         <div>
             <div>
-                <div>
-                    <h1>All About Georgie</h1>
-                </div>
+                <h1>All About Georgie</h1>
                 <div>
                     <picture>
                         <source srcset="img/georgie/1x/img-georgie-thumbnail-no-text-1x.png" media="(max-width:767px)">
@@ -49,13 +47,11 @@
                 </div>
             </div>
             <div>
-                <div>
-                    <h3>Research</h3>
-                    <p>This project’s initial objective was to create a responsive web application that allows anyone to send, spend, and transfer
+                <h3>Research</h3>
+                <p>This project’s initial objective was to create a responsive web application that allows anyone to send, spend, and transfer
                         money without using a physical debit or credit card and without having to visit a physical bank or store. Through
                         competitive analyses, I discovered there’s a market opportunity for an all-in-one financial management solution for young
                         adults in the United States between 22 and 32 years old.</p>
-                </div>
                 <div>
                     <picture>
                         <source srcset="img/georgie/1x/img-competitive-analysis-paypal-1x.png" media="(max-width:767px)">
@@ -66,11 +62,9 @@
                         <img src="img/georgie/2x/img-competitive-analysis-venmo-2x.png" alt="Screenshot of Danielle DuPuis's competitive analysis of Venmo.">
                     </picture>
                 </div>
-                <div>
-                    <p>With this in mind, I set out to learn more about Georgie’s potential users through user interviews and surveys. Through
+                <p>With this in mind, I set out to learn more about Georgie’s potential users through user interviews and surveys. Through
                         user research, I discovered there’s a large group of people in this age range who just don’t feel confident managing their
                         money.</p>
-                </div>
                 <div>
                     <picture>
                         <source srcset="img/georgie/1x/img-user-surveys-1x.png" media="(max-width:767px)">
@@ -81,9 +75,7 @@
                         <img src="img/georgie/2x/img-affinity-mapping-2x.png" alt="Affinity map showcasing all the data Danielle collected through user interviews.".">
                     </picture>
                 </div>
-                <div>
-                    <p>Finally, I was able to compile all of this research and data into something useful: Georgie's user persona Dominic!</p>
-                </div>
+                <p>Finally, I was able to compile all of this research and data into something useful: Georgie's user persona Dominic!</p>
                 <div>
                     <picture>
                         <source srcset="img/georgie/1x/img-dominic-1x.png" media="(max-width:767px)">
@@ -92,11 +84,9 @@
                 </div>
             </div>
             <div>
-                <div>
-                    <h3>Ideation & Wireframing</h3>
-                    <p>Keeping all of these traits in mind, I began mapping out everyday tasks that Georgie could help them accomplish. This is
+                <h3>Ideation & Wireframing</h3>
+                <p>Keeping all of these traits in mind, I began mapping out everyday tasks that Georgie could help them accomplish. This is
                     where the idea of a character came to me. Who said personal finance had to be dull and full of spreadsheets?</p>
-                </div>
                 <div>
                     <picture>
                         <source srcset="img/georgie/1x/img-user-flows-1x.png" media="(max-width:767px)">
@@ -107,9 +97,7 @@
                         <img src="img/georgie/2x/img-user-journey-2x.png" alt="Image of Dominic's user journey to create a budget so he can reach his savings goals with Georgie.">
                     </picture>
                 </div>
-                <div>
-                    <p>With these basic frameworks, I started creating low-fidelity wireframes to determine what the screens should look like. Because I envision Dominic and other Georgie users creating their budget when they sign up, the create budget flow has been replaced with a sign up/onboarding flow.</p>
-                </div>
+                <p>With these basic frameworks, I started creating low-fidelity wireframes to determine what the screens should look like. Because I envision Dominic and other Georgie users creating their budget when they sign up, the create budget flow has been replaced with a sign up/onboarding flow.</p>
                 <div>
                     <picture>
                         <source srcset="img/georgie/1x/img-low-fidelity-transfer-1x.png" media="(max-width:767px)">
@@ -124,9 +112,7 @@
                         <img src="img/georgie/2x/img-low-fidelity-payment-2x.png" alt="Wireframes showcasing how a Georgie user would make a payment with the app.">
                     </picture>
                 </div>
-                <div>
-                    <p>Using these low-fidelity wireframe sketches as my guide, I began creating mid-fidelity wireframes in Figma to see what elements could actually fit in the alloted space. I also used this as an opportunity to further flesh out new user onboarding and create the first functional prototype of Georgie.</p>
-                </div>
+                <p>Using these low-fidelity wireframe sketches as my guide, I began creating mid-fidelity wireframes in Figma to see what elements could actually fit in the alloted space. I also used this as an opportunity to further flesh out new user onboarding and create the first functional prototype of Georgie.</p>
                 <div>
                     <picture>
                         <source srcset="img/georgie/1x/img-mid-fidelity-transfer-1x.png" media="(max-width:767px)">
@@ -161,25 +147,25 @@
             <div>
                 <h3>High-Fidelity Wireframes & Prototype</h3>
                 <p>After brainstorming ways to solve the issues discovered during usability testing, I created high-fidelity wireframes and
-                    another functional prototype of Georgie. You can see the newest prototype <a href="https://www.figma.com/proto/naQNnqSUT4pjltAqV7kl7l/Georgie?node-id=463-4839&node-type=canvas&t=LD7UKZFTU9JosbrO-1&scaling=min-zoom&content-scaling=fixed&page-id=463%3A4835&starting-point-node-id=463%3A4839" target="_blank">here.</a>
-            </div>
-            <div>
-                <picture>
-                    <source srcset="img/georgie/1x/img-high-fidelity-transfer-1x.png" media="(max-width:767px)">
-                    <img src="img/georgie/2x/img-high-fidelity-transfer-2x.png" alt="High-fidelity wireframes created with Figma showcasing how a Georgie user would send money to a friend.">
-                </picture>
-                <picture>
-                    <source srcset="img/georgie/1x/img-high-fidelity-sign-up-1x.png" media="(max-width:767px)">
-                    <img src="img/georgie/2x/img-high-fidelity-sign-up-2x.png" alt="High-fidelity wireframes created with Figma showcasing how a new George user would sign up for an account.">
-                </picture>
-                <picture>
-                    <source srcset="img/georgie/1x/img-high-fidelity-onboarding-1x.png" media="(max-width:767px)">
-                    <img src="img/georgie/2x/img-high-fidelity-onboarding-2x.png" alt="High-fidelity wireframes created with Figma showcasing how a newly signed up Georgie user would complete onboarding.">
-                </picture>
-                <picture>
-                    <source srcset="img/georgie/1x/img-high-fidelity-payment-1x.png" media="(max-width:767px)">
-                    <img src="img/georgie/2x/img-high-fidelity-payment-2x.png" alt="High-fidelity wireframes created with Figma showcasing how a Georgie user would make a payment with the app.">
-                </picture>                
+                    another functional prototype of Georgie. You can see the newest prototype <a href="https://www.figma.com/proto/naQNnqSUT4pjltAqV7kl7l/Georgie?node-id=463-4839&node-type=canvas&t=LD7UKZFTU9JosbrO-1&scaling=min-zoom&content-scaling=fixed&page-id=463%3A4835&starting-point-node-id=463%3A4839" target="_blank">here.</a></p>
+                <div>
+                    <picture>
+                        <source srcset="img/georgie/1x/img-high-fidelity-transfer-1x.png" media="(max-width:767px)">
+                        <img src="img/georgie/2x/img-high-fidelity-transfer-2x.png" alt="High-fidelity wireframes created with Figma showcasing how a Georgie user would send money to a friend.">
+                    </picture>
+                    <picture>
+                        <source srcset="img/georgie/1x/img-high-fidelity-sign-up-1x.png" media="(max-width:767px)">
+                        <img src="img/georgie/2x/img-high-fidelity-sign-up-2x.png" alt="High-fidelity wireframes created with Figma showcasing how a new George user would sign up for an account.">
+                    </picture>
+                    <picture>
+                        <source srcset="img/georgie/1x/img-high-fidelity-onboarding-1x.png" media="(max-width:767px)">
+                        <img src="img/georgie/2x/img-high-fidelity-onboarding-2x.png" alt="High-fidelity wireframes created with Figma showcasing how a newly signed up Georgie user would complete onboarding.">
+                    </picture>
+                    <picture>
+                        <source srcset="img/georgie/1x/img-high-fidelity-payment-1x.png" media="(max-width:767px)">
+                        <img src="img/georgie/2x/img-high-fidelity-payment-2x.png" alt="High-fidelity wireframes created with Figma showcasing how a Georgie user would make a payment with the app.">
+                    </picture>                
+                </div>
             </div>
         </div>
     </main>
