classes, IDs, and stylesheets added

--- a/georgie.html
+++ b/georgie.html
@@ -2,6 +2,12 @@
 <html lang="en">
 
 <head>
+    <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.0/normalize.min.css">
+    <link rel="stylesheet" type="text/css" href="css/style.css">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Lexend:wght@100..900&family=Libre+Baskerville:ital,wght@0,400;0,700;1,400&family=Nunito+Sans:ital,opsz,wdth,wght@0,6..12,75..125,200..1000;1,6..12,75..125,200..1000&display=swap" rel="stylesheet">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="author" content="Danielle DuPuis">
@@ -24,7 +30,7 @@
         </div>
     </header>
     <main>
-        <div>
+        <div id="georgie">
             <div>
                 <h1>All About Georgie</h1>
                 <div>
@@ -170,11 +176,11 @@
         </div>
     </main>
     <footer>
-        <div>
+        <div id="contact">
             <h2>Get in touch with me!</h2>
             <p>Feel free to reach out to me <a href="tel: 8038738013">by phone</a> or follow my journey on social
                 media.</p>
-            <a href="mailto: dbdupuis@gmail.com">Email me</a>
+            <a href="mailto: dbdupuis@gmail.com" class="button contact">Email me</a>
             <ul>
                 <li><a href="https://www.linkedin.com/in/danielle-dupuis-141b30159/" target="_blank"><svg width="32" height="32" viewBox="0 0 32 32" fill="none"
                             xmlns="http://www.w3.org/2000/svg">
