--- a/about.html
+++ b/about.html
@@ -2,6 +2,12 @@
 <html lang="en">
 
 <head>
+    <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.0/normalize.min.css">
+    <link rel="stylesheet" type="text/css" href="css/style.css">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Lexend:wght@100..900&family=Libre+Baskerville:ital,wght@0,400;0,700;1,400&family=Nunito+Sans:ital,opsz,wdth,wght@0,6..12,75..125,200..1000;1,6..12,75..125,200..1000&display=swap" rel="stylesheet">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="author" content="Danielle DuPuis">
@@ -26,7 +32,7 @@
     <main>
         <h1>Get to know me!</h1>
         <div>
-            <div>
+            <div id="about">
                 <h2>My Story</h2>
                 <p>I’ve always loved pretty things and figuring out how to make things better. When I discovered
                     Photoshop CS5 in high school, you couldn’t keep me off my computer. I was always working
@@ -47,7 +53,7 @@
                     TV with my dogs, or hunting down my next iced Americano.
                 </p>
                 <p>
-                    If you want to learn more about my experience, check out my resume <a href="files/danielle-dupuis-resume-2024.pdf" target="_blank">here.</a>
+                    <a href="files/danielle-dupuis-resume-2024.pdf" target="_blank" class="button secondary">View my resume</a>
                 </p>
             </div>
             <div>
@@ -58,7 +64,7 @@
                 </picture>
             </div>
         </div>
-        <div>
+        <div id="skills">
             <div>
                 <h2>Skills & Tools</h2>
                 <div>
@@ -101,11 +107,11 @@
         </div>
     </main>
     <footer>
-        <div>
+        <div id="contact">
             <h2>Get in touch with me!</h2>
             <p>Feel free to reach out to me <a href="tel: 8038738013">by phone</a> or follow my journey on social
                 media.</p>
-            <a href="mailto: dbdupuis@gmail.com">Email me</a>
+            <a href="mailto: dbdupuis@gmail.com" class="button contact">Email me</a>
             <ul>
                 <li><a href="https://www.linkedin.com/in/danielle-dupuis-141b30159/" target="_blank"><svg width="32" height="32" viewBox="0 0 32 32" fill="none"
                             xmlns="http://www.w3.org/2000/svg">
