--- a/georgie.html
+++ b/georgie.html
@@ -19,7 +19,7 @@
 <body>
     <header>
         <div>
-            <img src="img/about/danielle-logo.svg" alt="Danielle logo">
+            <img class="logo" src="img/about/danielle-logo.svg" alt="Danielle logo">
             <nav>
                 <ul>
                     <li><a href="index.html">Work</a></li>
@@ -30,7 +30,7 @@
         </div>
     </header>
     <main>
-        <div id="georgie">
+        <div class="container" id="georgie">
             <div>
                 <h1>All About Georgie</h1>
                 <div>
@@ -52,13 +52,13 @@
                         see how I did it.</p>
                 </div>
             </div>
-            <div>
+            <div class="section">
                 <h3>Research</h3>
                 <p>This project’s initial objective was to create a responsive web application that allows anyone to send, spend, and transfer
                         money without using a physical debit or credit card and without having to visit a physical bank or store. Through
                         competitive analyses, I discovered there’s a market opportunity for an all-in-one financial management solution for young
                         adults in the United States between 22 and 32 years old.</p>
-                <div>
+                <div class="portfolio-images">
                     <picture>
                         <source srcset="img/georgie/1x/img-competitive-analysis-paypal-1x.png" media="(max-width:767px)">
                         <img src="img/georgie/2x/img-competitive-analysis-paypal-2x.png" alt="Screenshot of Danielle DuPuis's competitive analysis of Paypal.">
@@ -71,7 +71,7 @@
                 <p>With this in mind, I set out to learn more about Georgie’s potential users through user interviews and surveys. Through
                         user research, I discovered there’s a large group of people in this age range who just don’t feel confident managing their
                         money.</p>
-                <div>
+                <div class="portfolio-images">
                     <picture>
                         <source srcset="img/georgie/1x/img-user-surveys-1x.png" media="(max-width:767px)">
                         <img src="img/georgie/2x/img-user-surveys-2x.png" alt="User research results, specific to Danielle's user survey.">
@@ -82,18 +82,18 @@
                     </picture>
                 </div>
                 <p>Finally, I was able to compile all of this research and data into something useful: Georgie's user persona Dominic!</p>
-                <div>
+                <div class="portfolio-images">
                     <picture>
                         <source srcset="img/georgie/1x/img-dominic-1x.png" media="(max-width:767px)">
                         <img src="img/georgie/2x/img-dominic-2x.png" alt="Image of and information about Georgie's user persona Dominic.">
                     </picture>
                 </div>
             </div>
-            <div>
+            <div class="section">
                 <h3>Ideation & Wireframing</h3>
                 <p>Keeping all of these traits in mind, I began mapping out everyday tasks that Georgie could help them accomplish. This is
                     where the idea of a character came to me. Who said personal finance had to be dull and full of spreadsheets?</p>
-                <div>
+                <div class="portfolio-images">
                     <picture>
                         <source srcset="img/georgie/1x/img-user-flows-1x.png" media="(max-width:767px)">
                         <img src="img/georgie/2x/img-user-flows-2x.png" alt="Three core user flows of Georgie users.">
@@ -104,7 +104,7 @@
                     </picture>
                 </div>
                 <p>With these basic frameworks, I started creating low-fidelity wireframes to determine what the screens should look like. Because I envision Dominic and other Georgie users creating their budget when they sign up, the create budget flow has been replaced with a sign up/onboarding flow.</p>
-                <div>
+                <div class="portfolio-images">
                     <picture>
                         <source srcset="img/georgie/1x/img-low-fidelity-transfer-1x.png" media="(max-width:767px)">
                         <img src="img/georgie/2x/img-low-fidelity-transfer-2x.png" alt="Wireframes showcasing how a Georgie user would send money to a friend.">
@@ -119,7 +119,7 @@
                     </picture>
                 </div>
                 <p>Using these low-fidelity wireframe sketches as my guide, I began creating mid-fidelity wireframes in Figma to see what elements could actually fit in the alloted space. I also used this as an opportunity to further flesh out new user onboarding and create the first functional prototype of Georgie.</p>
-                <div>
+                <div class="portfolio-images">
                     <picture>
                         <source srcset="img/georgie/1x/img-mid-fidelity-transfer-1x.png" media="(max-width:767px)">
                         <img src="img/georgie/2x/img-mid-fidelity-transfer-2x.png" alt="Mid-fidelity wireframes created with Figma showcasing how a Georgie user would send money to a friend.">
@@ -138,7 +138,7 @@
                     </picture>
                 </div>
             </div>
-            <div>
+            <div class="section">
                 <h3>User Testing</h3>
                 <p>With my mid-fidelity wireframes in hand, I was ready to start conducting user testing to see how people like Dominic felt about Georgie’s setup.</p>
                 <p>I recruited 6 participants for moderated, remote user tests. During these 6 sessions, I was looking for issues in Georgie’s user experience. You can see a list of all the issues found in <a href="https://docs.google.com/spreadsheets/d/1atRz_ocJnvFqZLqzCpz0PTznM-nRxQbQVx5Dhc-FcGY/edit?usp=sharing" target="_blank">this spreadsheet</a>. The 5 issues I chose to tackle immediately were:</p>
@@ -150,11 +150,11 @@
                     <li>When prompted to make a payment, users tried to access their credit cards on the accounts section of their dashboard. (Medium Severity)</li>
                 </ol>
             </div>
-            <div>
+            <div class="section">
                 <h3>High-Fidelity Wireframes & Prototype</h3>
                 <p>After brainstorming ways to solve the issues discovered during usability testing, I created high-fidelity wireframes and
                     another functional prototype of Georgie. You can see the newest prototype <a href="https://www.figma.com/proto/naQNnqSUT4pjltAqV7kl7l/Georgie?node-id=463-4839&node-type=canvas&t=LD7UKZFTU9JosbrO-1&scaling=min-zoom&content-scaling=fixed&page-id=463%3A4835&starting-point-node-id=463%3A4839" target="_blank">here.</a></p>
-                <div>
+                <div class="portfolio-images">
                     <picture>
                         <source srcset="img/georgie/1x/img-high-fidelity-transfer-1x.png" media="(max-width:767px)">
                         <img src="img/georgie/2x/img-high-fidelity-transfer-2x.png" alt="High-fidelity wireframes created with Figma showcasing how a Georgie user would send money to a friend.">
@@ -176,12 +176,12 @@
         </div>
     </main>
     <footer>
-        <div id="contact">
+        <div class="container" id="contact">
             <h2>Get in touch with me!</h2>
             <p>Feel free to reach out to me <a href="tel: 8038738013">by phone</a> or follow my journey on social
                 media.</p>
             <a href="mailto: dbdupuis@gmail.com" class="button contact">Email me</a>
-            <ul>
+            <ul class="social">
                 <li><a href="https://www.linkedin.com/in/danielle-dupuis-141b30159/" target="_blank"><svg width="32" height="32" viewBox="0 0 32 32" fill="none"
                             xmlns="http://www.w3.org/2000/svg">
                             <path fill-rule="evenodd" clip-rule="evenodd"
