--- a/about.html
+++ b/about.html
@@ -2,12 +2,15 @@
 <html lang="en">
 
 <head>
-    <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.0/normalize.min.css">
+    <link rel="stylesheet" type="text/css"
+        href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.0/normalize.min.css">
     <link rel="stylesheet" type="text/css" href="css/style.css">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Lexend:wght@100..900&family=Libre+Baskerville:ital,wght@0,400;0,700;1,400&family=Nunito+Sans:ital,opsz,wdth,wght@0,6..12,75..125,200..1000;1,6..12,75..125,200..1000&display=swap" rel="stylesheet">
+    <link
+        href="https://fonts.googleapis.com/css2?family=Lexend:wght@100..900&family=Libre+Baskerville:ital,wght@0,400;0,700;1,400&family=Nunito+Sans:ital,opsz,wdth,wght@0,6..12,75..125,200..1000;1,6..12,75..125,200..1000&display=swap"
+        rel="stylesheet">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="author" content="Danielle DuPuis">
@@ -18,8 +21,8 @@
 
 <body>
     <header>
-        <div>
-            <img src="img/about/danielle-logo.svg" alt="Danielle logo">
+        <div class=container>
+            <img class="logo" src="img/about/danielle-logo.svg" alt="Danielle logo">
             <nav>
                 <ul>
                     <li><a href="index.html">Work</a></li>
@@ -30,97 +33,100 @@
         </div>
     </header>
     <main>
-        <h1>Get to know me!</h1>
-        <div>
-            <div id="about">
-                <h2>My Story</h2>
-                <p>I’ve always loved pretty things and figuring out how to make things better. When I discovered
-                    Photoshop CS5 in high school, you couldn’t keep me off my computer. I was always working
-                    on some kind of project. At Clemson, I discovered Graphic Communications. A whole
-                    program dedicated to problem-solving your way to get the print in your hand to match the
-                    design on the screen? I was hooked!
-                </p>
-                <p>My professional career started in event marketing but quickly transitioned to include digital
-                    marketing as well. In my early days, I had so much fun hopping from field to field and learning
-                    what I liked and disliked about each. Eventually, I found myself getting stagnant, and a friend
-                    was telling me about her job as a UX Researcher. Now you’re telling me I can solve problems
-                    in an aesthetically pleasing way?
-                </p>
-                <p>As I was diving head-first into UX, I realized many of these principles are transferable to
-                    marketing and started refining both skills. And that brings us to today! I currently work
-                    full-time in Growth Marketing focusing on re-engagement and work on UX projects part-time
-                    as a volunteer or freelancer. In my downtime, you can find me reading, watching bad reality
-                    TV with my dogs, or hunting down my next iced Americano.
-                </p>
-                <p>
-                    <a href="files/danielle-dupuis-resume-2024.pdf" target="_blank" class="button secondary">View my resume</a>
-                </p>
-            </div>
+        <div class="container">
+            <h1>Get to know me!</h1>
             <div>
-                <picture>
-                    <source srcset="img/about/1x/img-danielle-about-1x.jpg" media="(max-width:767px)">
-                    <img src="img/about/2x/img-danielle-about-2x.jpg"
-                        alt="Danielle DuPuis in Ireland with a Tayto statue">
-                </picture>
-            </div>
-        </div>
-        <div id="skills">
-            <div>
-                <h2>Skills & Tools</h2>
                 <div>
-                    <h3>Relevant Skills</h3>
-                    <ul>
-                        <li>Project management</li>
-                        <li>Problem-solving</li>
-                        <li>Basic HTML/CSS</li>
-                        <li>Email marketing</li>
-                        <li>Marketing automation</li>
-                        <li>Go-to-market strategy</li>
-                        <li>UX design</li>
-                        <li>UX research</li>
-                        <li>UI design</li>
-                        <li>Data analysis</li>
-                        <li>Usability testing</li>
-                        <li>Wireframing</li>
-                        <li>Prototyping</li>
-                    </ul>
+                    <picture>
+                        <source srcset="img/about/1x/img-danielle-about-1x.jpg" media="(max-width:767px)">
+                        <img src="img/about/2x/img-danielle-about-2x.jpg"
+                            alt="Danielle DuPuis in Ireland with a Tayto statue">
+                    </picture>
                 </div>
-                <div>
-                    <h3>Tools I Use</h3>
-                    <ul>
-                        <li>Adobe InDesign</li>
-                        <li>Adobe Illustrator</li>
-                        <li>Adobe Photoshop</li>
-                        <li>Microsoft Office Suite</li>
-                        <li>Hubspot Marketing Hub</li>
-                        <li>Salesforce</li>
-                        <li>Pardot</li>
-                        <li>Marketo</li>
-                        <li>Figma</li>
-                        <li>Github</li>
-                        <li>Hotjar</li>
-                        <li>Miro</li>
-                        <li>Notion</li>
-                    </ul>
+                <div id="about">
+                    <h2>My Story</h2>
+                    <p>I’ve always loved pretty things and figuring out how to make things better. When I discovered
+                        Photoshop CS5 in high school, you couldn’t keep me off my computer. I was always working
+                        on some kind of project. At Clemson, I discovered Graphic Communications. A whole
+                        program dedicated to problem-solving your way to get the print in your hand to match the
+                        design on the screen? I was hooked!
+                    </p>
+                    <p>My professional career started in event marketing but quickly transitioned to include digital
+                        marketing as well. In my early days, I had so much fun hopping from field to field and learning
+                        what I liked and disliked about each. Eventually, I found myself getting stagnant, and a friend
+                        was telling me about her job as a UX Researcher. Now you’re telling me I can solve problems
+                        in an aesthetically pleasing way?
+                    </p>
+                    <p>As I was diving head-first into UX, I realized many of these principles are transferable to
+                        marketing and started refining both skills. And that brings us to today! I currently work
+                        full-time in Growth Marketing focusing on re-engagement and work on UX projects part-time
+                        as a volunteer or freelancer. In my downtime, you can find me reading, watching bad reality
+                        TV with my dogs, or hunting down my next iced Americano.
+                    </p>
+                    <p>
+                        <a href="files/danielle-dupuis-resume-2024.pdf" target="_blank" class="button secondary">View my
+                            resume</a>
+                    </p>
+                </div>
+            </div>
+            <div id="skills">
+                <div class="row">
+                    <h2>Skills & Tools</h2>
+                    <div>
+                        <h3>Relevant Skills</h3>
+                        <ul>
+                            <li>Project management</li>
+                            <li>Problem-solving</li>
+                            <li>Basic HTML/CSS</li>
+                            <li>Email marketing</li>
+                            <li>Marketing automation</li>
+                            <li>Go-to-market strategy</li>
+                            <li>UX design</li>
+                            <li>UX research</li>
+                            <li>UI design</li>
+                            <li>Data analysis</li>
+                            <li>Usability testing</li>
+                            <li>Wireframing</li>
+                            <li>Prototyping</li>
+                        </ul>
+                    </div>
+                    <div class="row">
+                        <h3>Tools I Use</h3>
+                        <ul>
+                            <li>Adobe InDesign</li>
+                            <li>Adobe Illustrator</li>
+                            <li>Adobe Photoshop</li>
+                            <li>Microsoft Office Suite</li>
+                            <li>Hubspot Marketing Hub</li>
+                            <li>Salesforce</li>
+                            <li>Pardot</li>
+                            <li>Marketo</li>
+                            <li>Figma</li>
+                            <li>Github</li>
+                            <li>Hotjar</li>
+                            <li>Miro</li>
+                            <li>Notion</li>
+                        </ul>
+                    </div>
                 </div>
             </div>
         </div>
     </main>
     <footer>
-        <div id="contact">
+        <div class="container" id="contact">
             <h2>Get in touch with me!</h2>
             <p>Feel free to reach out to me <a href="tel: 8038738013">by phone</a> or follow my journey on social
                 media.</p>
             <a href="mailto: dbdupuis@gmail.com" class="button contact">Email me</a>
-            <ul>
-                <li><a href="https://www.linkedin.com/in/danielle-dupuis-141b30159/" target="_blank"><svg width="32" height="32" viewBox="0 0 32 32" fill="none"
-                            xmlns="http://www.w3.org/2000/svg">
+            <ul class="social">
+                <li><a href="https://www.linkedin.com/in/danielle-dupuis-141b30159/" target="_blank"><svg width="32"
+                            height="32" viewBox="0 0 32 32" fill="none" xmlns="http://www.w3.org/2000/svg">
                             <path fill-rule="evenodd" clip-rule="evenodd"
                                 d="M26.111 3H5.889C4.294 3 3 4.293 3 5.889V26.111C3 27.706 4.293 29 5.889 29H26.111C27.706 29 29 27.707 29 26.111V5.889C29 4.294 27.707 3 26.111 3ZM10.861 25.389H6.984V12.87H10.861V25.389ZM8.904 11.231C7.637 11.231 6.611 10.197 6.611 8.921C6.611 7.645 7.637 6.611 8.904 6.611C10.171 6.611 11.196 7.645 11.196 8.921C11.196 10.197 10.17 11.231 8.904 11.231ZM25.389 25.389H21.531V18.818C21.531 17.016 20.846 16.009 19.42 16.009C17.869 16.009 17.058 17.057 17.058 18.818V25.389H13.34V12.87H17.058V14.556C17.058 14.556 18.176 12.487 20.833 12.487C23.49 12.487 25.389 14.108 25.389 17.462V25.389Z"
                                 fill="black" />
                         </svg></a></li>
-                <li><a href="https://www.instagram.com/daniellllex/" target="_blank"><svg width="32" height="32" viewBox="0 0 32 32" fill="none"
-                            xmlns="http://www.w3.org/2000/svg">
+                <li><a href="https://www.instagram.com/daniellllex/" target="_blank"><svg width="32" height="32"
+                            viewBox="0 0 32 32" fill="none" xmlns="http://www.w3.org/2000/svg">
                             <path
                                 d="M10.2016 2.098C8.71163 2.168 7.69463 2.406 6.80563 2.755C5.88563 3.114 5.10563 3.595 4.32863 4.374C3.55263 5.153 3.07463 5.934 2.71863 6.855C2.37363 7.746 2.14063 8.764 2.07463 10.255C2.00863 11.745 1.99463 12.225 2.00163 16.026C2.00863 19.827 2.02563 20.304 2.09763 21.798C2.16863 23.287 2.40563 24.304 2.75463 25.194C3.11363 26.114 3.59463 26.894 4.37363 27.671C5.15263 28.447 5.93263 28.924 6.85663 29.281C7.74663 29.625 8.76563 29.86 10.2556 29.925C11.7456 29.99 12.2256 30.005 16.0266 29.998C19.8276 29.991 20.3056 29.974 21.7996 29.903C23.2936 29.832 24.3046 29.594 25.1946 29.246C26.1146 28.886 26.8956 28.406 27.6716 27.626C28.4476 26.846 28.9256 26.065 29.2806 25.143C29.6256 24.253 29.8596 23.234 29.9246 21.745C29.9896 20.251 30.0056 19.774 29.9976 15.972C29.9896 12.17 29.9736 11.694 29.9026 10.201C29.8316 8.708 29.5946 7.694 29.2456 6.804C28.8856 5.884 28.4056 5.104 27.6266 4.327C26.8476 3.55 26.0656 3.073 25.1436 2.718C24.2526 2.373 23.2346 2.138 21.7446 2.074C20.2546 2.01 19.7746 1.993 15.9726 2C12.1706 2.007 11.6946 2.024 10.2016 2.096M10.3656 27.405C9.00063 27.346 8.25963 27.119 7.76563 26.929C7.11163 26.677 6.64563 26.372 6.15363 25.885C5.66163 25.398 5.35863 24.93 5.10363 24.277C4.91163 23.783 4.68063 23.043 4.61663 21.678C4.54763 20.203 4.53263 19.76 4.52463 16.022C4.51663 12.284 4.53063 11.842 4.59563 10.366C4.65363 9.002 4.88163 8.26 5.07163 7.766C5.32363 7.111 5.62763 6.646 6.11563 6.154C6.60363 5.662 7.07063 5.359 7.72363 5.104C8.21663 4.911 8.95763 4.682 10.3216 4.617C11.7976 4.547 12.2406 4.533 15.9776 4.525C19.7146 4.517 20.1586 4.531 21.6356 4.596C22.9996 4.655 23.7416 4.881 24.2346 5.072C24.8886 5.324 25.3546 5.627 25.8466 6.116C26.3386 6.605 26.6416 7.07 26.8976 7.725C27.0906 8.217 27.3196 8.957 27.3836 10.322C27.4536 11.798 27.4696 12.241 27.4766 15.978C27.4836 19.715 27.4706 20.159 27.4056 21.634C27.3456 22.999 27.1196 23.74 26.9296 24.235C26.6776 24.889 26.3736 25.355 25.8846 25.847C25.3956 26.339 24.9296 26.642 24.2766 26.897C23.7836 27.089 23.0426 27.319 21.6796 27.384C20.2036 27.453 19.7606 27.468 16.0226 27.476C12.2846 27.484 11.8416 27.469 10.3656 27.405ZM21.7786 8.517C21.7806 9.445 22.5336 10.196 23.4616 10.194C24.3896 10.192 25.1406 9.439 25.1386 8.511C25.1366 7.583 24.3836 6.832 23.4556 6.834C22.5276 6.836 21.7776 7.589 21.7786 8.517ZM8.81163 16.013C8.81963 19.983 12.0436 23.195 16.0136 23.187C19.9836 23.179 23.1966 19.955 23.1896 15.985C23.1816 12.015 19.9566 8.802 15.9866 8.81C12.0166 8.818 8.80363 12.043 8.81163 16.013ZM11.3346 16.008C11.3296 13.431 13.4146 11.337 15.9926 11.332C18.5696 11.327 20.6636 13.412 20.6686 15.99C20.6736 18.567 18.5886 20.661 16.0106 20.666C13.4336 20.671 11.3396 18.587 11.3346 16.01"
                                 fill="black" />
