--- a/index.html
+++ b/index.html
@@ -33,8 +33,8 @@
         </div>
     </header>
     <main>
-        <div>
-            <div class="container" id="hero">
+        <div class="container">
+            <div id="hero">
                 <h1>Hi there, I'm Danielle!</h1>
                 <p>I'm a UX Designer and Marketer based in Denver, Colorado. I have experience in many fields and
                     different industries and I'm always looking to learn or create something new. Take a look at some of
