--- a/about.html
+++ b/about.html
@@ -68,7 +68,7 @@
                             resume</a>
                     </p>
                 </div>
-                <div id="skills" class="col-lg-5">
+                <div class="col-md-12 col-lg-5" id="skills">
                     <h2>Skills & Tools</h2>
                     <div class="row">
                         <div class="col-md-6">
