--- a/index.html
+++ b/index.html
@@ -33,12 +33,12 @@
         </div>
     </header>
     <main>
-        <div class="container" id="hero">
-            <h1>Hi there, I'm Danielle!</h1>
-            <p>I'm a UX Designer and Marketer based in Denver, Colorado. I have experience in many fields and
-                different industries and I'm always looking to learn or create something new. Take a look at some of
-                my latest
-                work.</p>
+        <div class="container-hero">
+                <h1>Hi there, I'm Danielle!</h1>
+                <p>I'm a UX Designer and Marketer based in Denver, Colorado. I have experience in many fields and
+                    different industries and I'm always looking to learn or create something new. Take a look at some of
+                    my latest
+                    work.</p>
         </div>
         <div class="container" id="work">
             <div>
@@ -279,6 +279,7 @@
             <p>Copyright Danielle DuPuis 2024</p>
         </div>
     </footer>
+    <script src="js/scripts.js"></script>
 </body>
 
 </html>
