--- a/about.html
+++ b/about.html
@@ -43,7 +43,7 @@
                 </picture>
             </div>
             <div class="row">
-            <div id="about" class="col-lg-7">
+                <div id="about" class="col-lg-7">
                     <h2>My Story</h2>
                     <p>I’ve always loved pretty things and figuring out how to make things better. When I discovered
                         Photoshop CS5 in high school, you couldn’t keep me off my computer. I was always working
@@ -135,5 +135,7 @@
             <p>Copyright Danielle DuPuis 2024</p>
         </div>
     </footer>
+    <script src="js/scripts.js"></script>
+</body>
 
 </html>
