--- a/tailored-touchpoints.html
+++ b/tailored-touchpoints.html
@@ -80,7 +80,7 @@
                 <p>Due to the nature of this campaign, the target audience was built in our marketing automation
                     platform using demographic fitlers. While I don't feel comfortable sharing specific filters, the
                     target audience was comprised of leads in our database that were Life Science adjacent industries in
-                    North America.</p> 
+                    North America.</p>
                 <p>The size of this audience was pretty small, a little more than 1,000 people, as we
                     wanted to ensure that we were complying with GDPR standards.</p>
                 <div class="portfolio-images">
@@ -141,6 +141,7 @@
             <p>Copyright Danielle DuPuis 2024</p>
         </div>
     </footer>
+    <script src="js/scripts.js"></script>
 </body>
 
 </html>
